Updating source code for latest changes on 22 September.